--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySqlCon.classpath}
+    ${libs.MySqlCon.classpath}:\
+    ${libs.JasperReport-6.20.5.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
